--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "26.0.0"
     defaultConfig {
-        applicationId "com.example.dangou.myapplication"
+        applicationId "com.example.dangou.filesync"
         minSdkVersion 19
         targetSdkVersion 24
         versionCode 1
